[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openconnect-sso"
version = "0.8.1"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
license = {file="LICENSE"}
authors = [
    {name="László Vaskó", email="laszlo.vasko@outlook.com"}
]
readme = {file = "README.md", content-type="text/markdown"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
requires-python = ">=3.8"
dependencies = [
"attrs>=18.2",
"colorama>=0.4",
"importlib-metadata>=3.10.0; python_version<'3.8'",
"lxml>=4.3",
"keyring>=21.1,<24.0.0",
"prompt-toolkit>=3.0.3",
"pyxdg>=0.26,<0.29",
"requests>=2.22",
"structlog>=20.1",
"toml>=0.10",
"setuptools>40.0",
"PySocks>=1.7.1",
"PyQt6>=6.3.0",
"PyQt6-WebEngine>=6.3.0",
"pyotp>=2.7.0"
]

[project.optional-dependencies]
dev-dependencies = [
"coverage_enable_subprocess>=1.0",
"pytest>=7.2",
"black>=22.10",
"pytest-asyncio>=0.20.1",
"pytest-cov>=4.0",
"pytest-httpserver>=1.0"
]

[project.urls]
Homepage = "https://github.com/vlaci/openconnect-sso"
Repository = "https://github.com/vlaci/openconnect-sso"

[project.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[tool.black]
target-version = ['py36', 'py37', 'py38']

